# MarketMind

./: README.md  app.py  dvc.yaml  format.sh  main.py  params.yaml  pyproject.toml  requirements.txt  streamlitApp.py  structure.py
artifacts/data_ingestion/: data.csv
artifacts/data_preprocessing/: .gitignore
artifacts/model_evaluation/: .gitignore
artifacts/model_training/: .gitignore
artifacts/model_training/model/: evaluations.npz
config/: config.yaml
notebooks/: data.csv  data_ingestion.ipynb  data_loading.ipynb  data_preprocessing.ipynb  model_train_eval.ipynb  vec_normalize.pkl
notebooks/models/: evaluations.npz
notebooks/tb_logs/PPO_1/: events.out.tfevents.1757941797.lambda404.14855.0
notebooks/tb_logs/PPO_2/: events.out.tfevents.1757943461.lambda404.14855.1
notebooks/tb_logs/PPO_3/: events.out.tfevents.1757943471.lambda404.499984.0
notebooks/tb_logs/ppo_trading_1/: events.out.tfevents.1757943814.lambda404.499984.1  events.out.tfevents.1757996414.lambda404.233841.0  events.out.tfevents.1758009032.lambda404.151070.0
notebooks/tb_logs/ppo_trading_10/: events.out.tfevents.1758440024.lambda404.101944.2
notebooks/tb_logs/ppo_trading_11/: events.out.tfevents.1758440963.lambda404.173026.0
notebooks/tb_logs/ppo_trading_12/: events.out.tfevents.1758441197.lambda404.173026.1
notebooks/tb_logs/ppo_trading_13/: events.out.tfevents.1758441209.lambda404.178574.0
notebooks/tb_logs/ppo_trading_14/: events.out.tfevents.1758443069.lambda404.178574.1
src/MarketMind/: __init__.py
src/MarketMind/components/: data_ingestion.py  data_preprocessing.py  (+2 more)
(+47 files in other folders)
